Change the imaging types to fit with SNOMED CT

--- a/index.html
+++ b/index.html
@@ -153,17 +153,14 @@ it depends on how many records we end up with in the database.">
                             <li>
                                 <span class="filter-category">Imaging Data</span>
                                 <ul class="nested-filter-list">
-                                    <li><label><input type="checkbox" value="Bioluminescence Imaging"> Bioluminescence Imaging</label></li>
-                                    <li><label><input type="checkbox" value="Bone Scans"> Bone Scans</label></li>
-                                    <li><label><input type="checkbox" value="Computed Tomography"> Computed Tomography</label></li>
-                                    <li><label><input type="checkbox" value="Fluorescence Imaging"> Fluorescence Imaging</label></li>
-                                    <li><label><input type="checkbox" value="Histology slides"> Histology slides</label></li>
-                                    <li><label><input type="checkbox" value="Imaging Mass Cytometry"> Imaging Mass Cytometry</label></li>
+                                    <li><label><input type="checkbox" value="Fluorescence imaging"> Fluorescence imaging</label></li>
                                     <li><label><input type="checkbox" value="Magnetic Resonance Imaging"> Magnetic Resonance Imaging</label></li>
-                                    <li><label><input type="checkbox" value="Positron Emission Tomography"> Positron Emission Tomography</label></li>
-                                    <li><label><input type="checkbox" value="Tomosynthesis"> Tomosynthesis</label></li>
-                                    <li><label><input type="checkbox" value="Ultrasound"> Ultrasound</label></li>
-                                    <li><label><input type="checkbox" value="X-rays"> X-rays</label></li>
+                                    <li><label><input type="checkbox" value="Medical photography"> Medical photography</label></li>
+                                    <li><label><input type="checkbox" value="Medical photography"> Medical photography</label></li>
+                                    <li><label><input type="checkbox" value="Microscopy"> Microscopy </label></li>
+                                    <li><label><input type="checkbox" value="Nuclear medicine imaging procedure"> Nuclear medicine imaging procedure</label></li>
+                                    <li><label><input type="checkbox" value="Radiographic imaging procedure"> Radiographic imaging procedure</label></li>
+                                    <li><label><input type="checkbox" value="Ultrasonography"> Ultrasonography</label></li>
                                 </ul>
                             </li>
                             <li>
@@ -265,15 +262,15 @@ it depends on how many records we end up with in the database.">
                             <li>
                                 <span class="filter-category">Imaging Data</span>
                                 <ul class="nested-filter-list">
-                                    <li><label><input type="checkbox" value="Bone Scans"> Bone Scans</label></li>
-                                    <li><label><input type="checkbox" value="Computed Tomography"> Computed Tomography</label></li>
-                                    <li><label><input type="checkbox" value="Imaging Mass Cytometry"> Imaging Mass Cytometry</label></li>
+                                    <li><label><input type="checkbox" value="Bioluminescence imaging"> Bioluminescence Imaging</label></li>
+                                    <li><label><input type="checkbox" value="Fluorescence imaging"> Fluorescence imaging</label></li>
                                     <li><label><input type="checkbox" value="Magnetic Resonance Imaging"> Magnetic Resonance Imaging</label></li>
-                                    <li><label><input type="checkbox" value="Mammography"> Mammography</label></li>
-                                    <li><label><input type="checkbox" value="Positron Emission Tomography"> Positron Emission Tomography</label></li>
-                                    <li><label><input type="checkbox" value="Tomosynthesis"> Tomosynthesis</label></li>
-                                    <li><label><input type="checkbox" value="Ultrasound"> Ultrasound</label></li>
-                                    <li><label><input type="checkbox" value="X-rays"> X-rays</label></li>
+                                    <li><label><input type="checkbox" value="Medical photography"> Medical photography</label></li>
+                                    <li><label><input type="checkbox" value="Medical photography"> Medical photography</label></li>
+                                    <li><label><input type="checkbox" value="Microscopy"> Microscopy </label></li>
+                                    <li><label><input type="checkbox" value="Nuclear medicine imaging procedure"> Nuclear medicine imaging procedure</label></li>
+                                    <li><label><input type="checkbox" value="Radiographic imaging procedure"> Radiographic imaging procedure</label></li>
+                                    <li><label><input type="checkbox" value="Ultrasonography"> Ultrasonography</label></li>
                                 </ul>
                             </li>
                             <li>
