Changing the Study Filter approach

--- a/index.html
+++ b/index.html
@@ -37,33 +37,28 @@
     <main class="main-content">
         <div class="left-sidebar-container">
           <div class="container">
-<button id="filterButton">Filters (0)</button>
-<div class="filter-helper">You can filter the studies by Cancer type and more here</div>
-<div id="selectedChips"></div>
+
+
+
 </div>
-          <div id="overlay"></div>
+
           <aside id="filterPanel">
             <div class="panel-header">
-              <div class="panel-title">Keyword Filters</div>
-
+              <div class="panel-title">Study Filters</div>
               <div style="display:flex; gap:8px;">
-
                 <button id="backBtn" class="icon-btn">◀</button>
-                <button id="closeBtn" class="icon-btn">✕</button>
+
               </div>
 
+
             </div>
-              <p>
-                    <div class="filter-logic-group">
-                  <button id="andBtn" class="toggle-btn active">add with AND</button>
-                  <button id="orBtn" class="toggle-btn">add with OR</button>
-                </div>
-                </p>
+              <div id="selectedChips"></div>
+              <div id="selectedChips"></div>
+              <p>Click box to chose filter, click term to see sub-categories</p>
             <div id="breadcrumb" class="breadcrumb"></div>
             <ul id="choices" class="list"></ul>
             <div class="panel-footer">
               <button id="clearBtn" class="btn-secondary">Clear</button>
-              <button id="doneBtn" class="btn-primary">Done</button>
             </div>
           </aside>
             <div class="video-promo-box">
