removed CRUK logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="banner">
             <div class="logo-placeholder">
                 <p><a href="https://www.cancerresearchuk.org/">
-                    <img src="logo.svg" alt="CRUK Logo" style="width: 200px; height: auto;">
+                    <img src="" alt="CRUK Logo" style="width: 200px; height: auto;">
                 </a></p>
             </div>
             <h2 class="strap-line">CRUK Data Hub</h2>
