removed CRUK logo

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
               <div id="selectedChips"></div>
               <p>Click box to chose filter, click term to see sub-categories</p>
             <div id="breadcrumb" class="breadcrumb"></div>
-            <ul id="choices" class="list"></ul>
+            <div id="choices-container">
+                <ul id="choices" class="list"></ul>
+            </div>
             <div class="panel-footer">
               <button id="clearBtn" class="btn-secondary">Clear</button>
             </div>
