--- a/icons.html
+++ b/icons.html
@@ -27,15 +27,23 @@
         <img src="resources/biobank.png" alt="biobank" class="icon-link">
     </a>
     <a title="in vitro study">
-        <img src="resources/invitro.png" alt="invitro" class="icon-link">
+        <img src="resource/invitro.png" alt="invitro" class="icon-link">
     </a>
     <a title="medical imaging">
-        <img src="resources/medical_imaging.png" alt="medical imaging" class="icon-link">
+        <img src="resource/medical_imaging.png" alt="medical imaging" class="icon-link">
     </a>
     <a title="'omics">
-        <img src="resources/omics.png" alt="omics" class="icon-link">
+        <img src="resource/omics.png" alt="omics" class="icon-link">
     </a>
-
+    <a title="treatments">
+        <img src="resource/treatments.png" alt="treatments" class="icon-link">
+    </a>
+    <a title="lab results and biopsies">
+        <img src="resource/lab_results.png" alt="lab results and biopsies" class="icon-link">
+    </a>
+    <a title="longitudinal study">
+        <img src="resource/longitudinal.png" alt="longitudinal" class="icon-link">
+    </a>
 
     <p>Hover over the images above to see what information they refer to.</p>
 
