adding in icons

--- a/icons.html
+++ b/icons.html
@@ -18,13 +18,13 @@
     <h1>Example icons to use with studies</h1>
 
     <a title="animal study">
-        <img src="resources/animal.png" alt="animal study" class="icon-link">
+        <img src="resource/animal.png" alt="animal study" class="icon-link">
     </a>
     <a title="background information">
-        <img src="resources/background.png" alt="background" class="icon-link">
+        <img src="resource/background.png" alt="background" class="icon-link">
     </a>
     <a title="biobank samples">
-        <img src="resources/biobank.png" alt="biobank" class="icon-link">
+        <img src="resource/biobank.png" alt="biobank" class="icon-link">
     </a>
     <a title="in vitro study">
         <img src="resource/invitro.png" alt="invitro" class="icon-link">
