adding in details of an upload page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUK Data Hub - Together We Are Beating Cancer </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 <div class="watermark">Provisional page only - not endorsed by CRUK</div>
@@ -102,7 +102,7 @@
         </section>
     </main>
 
-    <script src="script.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 <div class="watermark">Provisional page only - not endorsed by CRUK</div>
 
