--- a/metadata.html
+++ b/metadata.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mockup Page</title>
+    <title>Mockup Page for metadata</title>
     <link rel="stylesheet" href="styles/metadata.css">
+    <link rel="stylesheet" href="styles/structural_metadata.css">
 </head>
 <body>
     <div class="container">
+
         <nav class="navbar">
             <h3>Names</h3>
             <ul id="name-list">
@@ -15,7 +17,16 @@
         </nav>
 
         <main class="content">
-            <h1>Kidney Cancer Longitudinal Dataset Overview</h1>
+            <div style="margin-bottom: 20px;">
+                <button class="keyword-button" id="toggleDevNotes">
+                    Hide Developer Notes
+                </button>
+            </div>
+
+        <div class="dev-note">
+           <p>(CRUK styling as before and buttons for general enquiry etc.)</p>
+        </div>
+            <h1>Comprehensive Renal Carcinoma Cohort</h1>
 
             <div class="image-gallery">
                 <div class="image-box">
@@ -43,32 +54,93 @@
                     </div>
                 </div>
             </div>
-
+            <div class="dev-note">
+                <p>The icons above should reflect whether the upload includes any filters from the following
+                areas: Background, Animal Model, Biobank Samples, Biopsy Reports and Lab Results,
+                Multi-omic Data, Treatments, Imaging Data, and Longitudinal Follow up</p>
+            </div>
             <div class="text-content">
-                <p>
-                    This is the main body text following the images. It is designed to demonstrate the scrolling capability of the central content area. The navbar on the left will remain fixed in place while you scroll this text.
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-                <p>
-                    Proin eget tortor sodales, congue massa in, maximus odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam at ipsum sit amet elit consequat accumsan. Vivamus sit amet tellus in nisl egestas ultrices. Sed at augue ac neque facilisis bibendum. (Scroll down to see more)
-                </p>
-                <p>
-                    Phasellus id dui interdum, consectetur sapien vel, euismod metus. Cras vel urna id est posuere dignissim a eget mi. Curabitur blandit arcu sit amet magna placeret, vel eleifend turpis gravida. Aenean nec diam sit amet ante euismod vehicula. Integer facilisis, leo non iaculis efficitur, nunc velit ultrices nibh, vitae varius neque velit eget justo.
-                </p>
-                <p>
-                    Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit.
-                </p>
+                <h2>Keywords</h2>
+                <div class="button-group">
+                    <button class="keyword-button">Kidney Cancer</button>
+                    <button class="keyword-button">Longitudinal</button>
+                    <button class="keyword-button">Medical Protocols</button>
+                    <button class="keyword-button">Biobank Samples</button>
+                    <button class="keyword-button">Radiology</button>
+                </div>
+                <h2>Summary</h2>
+                <p>The Kidney Cancer Longitudinal Dataset is a rich, integrated resource focused on understanding the etiology, progression, and treatment response of various kidney cancers, primarily Renal Cell Carcinoma (RCC) subtypes. It follows patients over time, linking diverse data streams to provide a holistic view of the disease journey.</p>
+                <h2>Structural Metadata</h2>
+                    <div class="dev-note">
+                            <p>The Structural Metadata table can be styled much as before.
+                            However, it would be good to put the description of each table next to or underneath
+                            the table header to draw attention to it, and to keep the structural metadata table
+                            inline with the rest of the text.</p>
+
+                    </div>
+                <details class="collapsible-text">
+                    <summary class = "collapsible-header">
+                            <h3>Metadata table</h3>
+                    </summary>
+                    <div class="collapsible-content">
+                        <div id="metadata-container">
+                        </div>
+
+                    </div>
+                </details>
+                <h2>Documentation</h2>
+                <details class="collapsible-text">
+                    <summary class = "collapsible-header">
+
+                            <h3>Key Data Components.</h3>
+                            <p>The CRCC includes 5,500 patient records and is structured into five core, linked domains:</p>
+
+                    </summary>
+                    <div class="collapsible-content">
+                        <h4>1. Patient Demographics & Background Environment</h4>
+                            <p>This domain captures non-clinical factors potentially influencing cancer risk and outcomes.</p>
+                                <ul>
+                                    <li>Demographics: Age at diagnosis, sex, ethnicity, geographic location (initial residence).</li>
+                                    <li>Environmental Data: Detailed residential and occupational history (e.g., exposure to known carcinogens, industrial pollutants, heavy metals), lifestyle factors (smoking status, alcohol consumption, physical activity, diet).</li>
+                                    <li>Comorbidities: Pre-existing conditions (e.g., hypertension, diabetes, obesity) and family history of cancer.</li>
+
+                                </ul>
+                                <h4>2. Clinical and Treatment Data</h4>
+                                <p>This longitudinal component tracks the patient's medical course from initial presentation through follow-up.</p>
+                                <ul>
+                                    <li>Diagnosis and Staging: Cancer type and subtype (e.g., clear cell, papillary), tumor size, TNM staging (at diagnosis and recurrence), grade.</li>
+                                    <li> Medical Protocols and Treatments: Detailed records of all interventions:</li>
+                                    <li>Surgery: Type of nephrectomy (partial vs. radical), lymphadenectomy, date of procedure.</li>
+                                    <li>Systemic Therapy: Specific drug regimens, including targeted therapies (e.g., tyrosine kinase inhibitors), immunotherapy (e.g., checkpoint inhibitors), and chemotherapy; dosage, duration, and dates.</li>
+                                    <li>Radiation Therapy: Dosing, fractionation, and targets.</li>
+                                    <li>Outcomes: Disease-Free Survival (DFS), Overall Survival (OS), site and date of recurrence, treatment response criteria (e.g., RECIST scores).</li>
+                                </ul>
+                                <p> etc etc ...</p>
+                    </div>
+                </details>
+
+
+                <h2>Data Access Request</h2>
+                          <div class="dev-note">
+                <p>The remainder can be styled as before</p>
+            </div>
+
+                <h2>Provenance</h2>
+                <h2>Observations</h2>
+
             </div>
         </main>
 
         <aside class="right-panel">
+            <div class="dev-note">
+           <p>All of the cruk filters to appear here. May need to make scrollable.</p>
+        </div>
             <div id="right-panel-content">
                 </div>
         </aside>
     </div>
 
     <script src="assets/metadata.js"></script>
+    <script src="assets/structural_metadata.js"></script>
 </body>
 </html>
