Adding in structural metadata tables and developer notes

--- a/metadata.html
+++ b/metadata.html
@@ -11,6 +11,9 @@
     <div class="container">
 
         <nav class="navbar">
+            <div class="dev-note">
+           <p>Note the change in order to give prominence to the structural metadata</p>
+        </div>
             <h3>Names</h3>
             <ul id="name-list">
                 </ul>
@@ -24,7 +27,8 @@
             </div>
 
         <div class="dev-note">
-           <p>(CRUK styling as before and buttons for general enquiry etc.)</p>
+           <p>CRUK styling as before and buttons for general enquiry etc. Note however, that at present the metadata and structural metadata can only be downloaded separately.</p>
+            <p> I'm unclear why this is. If you download the two together as a json, it's much easier for searching </p>
         </div>
             <h1>Comprehensive Renal Carcinoma Cohort</h1>
 
