Adding in structural metadata tables and developer notes

--- a/metadata.html
+++ b/metadata.html
@@ -14,7 +14,7 @@
             <div class="dev-note">
            <p>Note the change in order to give prominence to the structural metadata</p>
         </div>
-            <h3>Names</h3>
+            <h3>Overview</h3>
             <ul id="name-list">
                 </ul>
         </nav>
