Adding in the Entity Relationship Diagrams and url link/doi link

--- a/metadata.html
+++ b/metadata.html
@@ -74,6 +74,7 @@
                 </div>
                 <h2>Summary</h2>
                 <p>The Kidney Cancer Longitudinal Dataset is a rich, integrated resource focused on understanding the etiology, progression, and treatment response of various kidney cancers, primarily Renal Cell Carcinoma (RCC) subtypes. It follows patients over time, linking diverse data streams to provide a holistic view of the disease journey.</p>
+                <p>The website associated with the dataset is at</p> <a href="https://www.iccr-cancer.org/datasets/published-datasets/urinary-male-genital/renal-tubular/">https://www.iccr-cancer.org/datasets/published-datasets/urinary-male-genital/renal-tubular/</a>
                 <h2>Structural Metadata</h2>
                     <div class="dev-note">
                             <p>The Structural Metadata table can be styled much as before.
@@ -128,7 +129,10 @@
                           <div class="dev-note">
                 <p>The remainder can be styled as before</p>
             </div>
-
+                <h2> Entity Relationship Diagrams </h2> <button class="keyword-button">Download</button>
+                <div class="large-image-box">
+                    <img src="resource/erd.png" alt="entity relationship diagram">
+                </div>
                 <h2>Provenance</h2>
                 <h2>Observations</h2>
 
