--- a/upload.html
+++ b/upload.html
@@ -27,6 +27,7 @@
                 <li class="nav-item"><a href="#">Summary</a></li>
                 <li class="nav-item current"><a href="#">CRUK filters</a></li>
                 <li class="nav-item"><a href="#">Documentation</a></li>
+                <li class="nav-item"><a href="#">Entity Relationship Diagrams</a></li>
                 <li class="nav-item"><a href="#">Coverage</a></li>
                 <li class="nav-item"><a href="#">Provenance</a></li>
                 <li class="nav-item"><a href="#">Accessibility</a></li>
