Include population icon

--- a/metadata.html
+++ b/metadata.html
@@ -35,6 +35,12 @@
             <div class="image-gallery">
                 <div class="image-box">
                     <div class="image-tooltip">
+                        <img src="resource/population.png" alt="population">
+                        <span class="tooltip-text">Population Size</span>
+                    </div>
+                </div>
+                <div class="image-box">
+                    <div class="image-tooltip">
                         <img src="resource/background.png" alt="background">
                         <span class="tooltip-text">Background</span>
                     </div>
