--- a/metadata.html
+++ b/metadata.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mockup Page for metadata</title>
     <link rel="stylesheet" href="styles/metadata.css">
+    <link rel="stylesheet" href="styles/dev_note.css">
     <link rel="stylesheet" href="styles/structural_metadata.css">
 </head>
 <body>
@@ -155,6 +156,7 @@
     </div>
 
     <script src="assets/metadata.js"></script>
+    <script src="assets/dev_note.js"></script>
     <script src="assets/structural_metadata.js"></script>
 </body>
 </html>
