--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
             margin: 20px;
             background-color: #f4f4f9; /* Light background */
             color: #333;
-            max-width: 800px;
+            max-width: 90%;
             margin-left: auto;
             margin-right: auto;
             font-size: 1.1em; /* Using a larger font as requested */
