link up the navbar and adjust the structural metadata to showcase biobank options

--- a/metadata.html
+++ b/metadata.html
@@ -71,7 +71,7 @@
                 Multi-omic Data, Treatments, Imaging Data, and Longitudinal Follow up</p>
             </div>
             <div class="text-content">
-                <h2>Keywords</h2>
+                <h2 id="keywords">Keywords</h2>
                 <div class="button-group">
                     <button class="keyword-button">Kidney Cancer</button>
                     <button class="keyword-button">Longitudinal</button>
@@ -79,10 +79,10 @@
                     <button class="keyword-button">Biobank Samples</button>
                     <button class="keyword-button">Radiology</button>
                 </div>
-                <h2>Summary</h2>
+                <h2 id="summary">Summary</h2>
                 <p>The Kidney Cancer Longitudinal Dataset is a rich, integrated resource focused on understanding the etiology, progression, and treatment response of various kidney cancers, primarily Renal Cell Carcinoma (RCC) subtypes. It follows patients over time, linking diverse data streams to provide a holistic view of the disease journey.</p>
                 <p>The website associated with the dataset is at</p> <a href="https://www.iccr-cancer.org/datasets/published-datasets/urinary-male-genital/renal-tubular/">https://www.iccr-cancer.org/datasets/published-datasets/urinary-male-genital/renal-tubular/</a>
-                <h2>Structural Metadata</h2>
+                <h2 id="structural-metadata">Structural Metadata</h2>
                     <div class="dev-note">
                             <p>The Structural Metadata table can be styled much as before.
                             However, it would be good to put the description of each table next to or underneath
@@ -100,7 +100,7 @@
 
                     </div>
                 </details>
-                <h2>Documentation</h2>
+                <h2 id="documentation">Documentation</h2>
                 <details class="collapsible-text">
                     <summary class = "collapsible-header">
 
@@ -136,12 +136,12 @@
                           <div class="dev-note">
                 <p>The remainder can be styled as before</p>
             </div>
-                <h2> Entity Relationship Diagrams </h2> <button class="keyword-button">Download</button>
+                <h2 id="entity-relationship-diagrams"> Entity Relationship Diagrams </h2> <button class="keyword-button">Download</button>
                 <div class="large-image-box">
                     <img src="resource/erd.png" alt="entity relationship diagram">
                 </div>
-                <h2>Provenance</h2>
-                <h2>Observations</h2>
+                <h2 id="provenance">Provenance</h2>
+                <h2 id="observations">Observations</h2>
 
             </div>
         </main>
