--- a/alternatives/buttons.html
+++ b/alternatives/buttons.html
@@ -25,7 +25,7 @@
             margin: 0;
             padding: 0;
         }
-        /* Style for the scrollbar to make it cleaner */
+        /* Custom scrollbar for container */
         .filter-scroll::-webkit-scrollbar {
             width: 8px;
         }
@@ -83,7 +83,6 @@
         <h1 class="text-3xl sm:text-4xl font-bold text-gray-800 mb-6">Select Study Filters</h1>
 
         <!-- --- Filter Navigation Bar --- -->
-        <!-- Note: rounded-b-xl removed here to let the chip area handle the bottom border/shadow -->
         <div id="filter-navbar" class="flex flex-col sm:flex-row bg-white rounded-t-xl shadow-lg border-b border-gray-300 overflow-hidden">
             <!-- Filter Category Buttons (Active state handled by JS) -->
             <button id="nav-cancer" data-panel-target="cancer-type-panel" class="nav-button flex-1 px-4 py-3 text-lg font-medium border-b-4 sm:border-b-0 sm:border-r text-gray-600 hover:bg-gray-50 transition duration-150">
@@ -109,7 +108,6 @@
         <!-- --- End Navigation Bar --- -->
 
         <!-- --- Filter Chip Area (NEW) --- -->
-        <!-- This area will show the selected filters as removable chips -->
         <div id="selected-filters-area" class="bg-white rounded-b-xl shadow-lg border-b border-l border-r border-gray-300 transition duration-300 ease-in-out">
             <div class="flex items-start flex-wrap gap-2 text-sm" id="filter-chip-list">
                 <!-- Chips will be inserted here by JavaScript -->
@@ -123,18 +121,18 @@
 
 
         <!-- --- Filter Content Panels (Only one is visible at a time) --- -->
-        <!-- Note: mt-0 is used here as the chip area handles the necessary mb-4 spacing -->
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 flex-grow mt-4">
-            <!-- This container holds the panels and ensures they stretch correctly -->
+        <!-- Main panels no longer have max-h-32 or overflow-y-auto, allowing them to size correctly around constrained inner content -->
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-4">
 
             <!-- Panel 1: Cancer Type Content -->
-            <!-- Initially hidden for the new behavior -->
-            <div id="cancer-type-panel" class="md:col-span-3 bg-white rounded-xl shadow-lg border border-gray-200 overflow-hidden flex flex-col hidden">
+            <div id="cancer-type-panel" class="md:col-span-3 bg-white rounded-xl shadow-lg border border-gray-200 flex flex-col hidden">
                 <div class="p-3 sm:p-4 text-gray-600 flex-grow overflow-hidden">
-                    <h2 class="text-2xl font-bold text-gray-800 mb-3">Cancer Type Selection</h2>
-                    <p class="text-sm italic text-gray-500 mb-3">
-                        Filter by official pathology classifications (ICD-O) or patient-friendly CRUK terminology.
-                    </p>
+                    <div class="flex flex-col sm:flex-row sm:items-baseline sm:justify-between mb-3">
+                        <h2 class="text-2xl font-bold text-gray-800 mb-1 sm:mb-0">Cancer Type Selection</h2>
+                        <p class="text-sm italic text-gray-500">
+                            Filter by official pathology classifications (ICD-O) or patient-friendly CRUK terminology.
+                        </p>
+                    </div>
 
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
 
@@ -145,14 +143,16 @@
                             <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
                                 <div class="bg-white p-3 rounded-md shadow-inner border border-gray-200">
                                     <h4 class="text-sm font-bold text-gray-700 mb-2">Histology (Nested)</h4>
-                                    <div id="icdo-histology-list" class="h-40 overflow-y-auto filter-scroll space-y-1 text-sm pr-2">
+                                    <!-- Inner scrolling list now max-h-32 (closest to h-30) -->
+                                    <div id="icdo-histology-list" class="max-h-32 overflow-y-auto filter-scroll space-y-1 text-sm pr-2">
                                         <!-- Content injected here by JavaScript -->
                                     </div>
                                 </div>
 
                                 <div class="bg-white p-3 rounded-md shadow-inner border border-gray-200">
                                     <h4 class="text-sm font-bold text-gray-700 mb-2">Topography (Nested)</h4>
-                                    <div id="icdo-topography-list" class="h-40 overflow-y-auto filter-scroll space-y-1 text-sm pr-2">
+                                    <!-- Inner scrolling list now max-h-32 (closest to h-30) -->
+                                    <div id="icdo-topography-list" class="max-h-32 overflow-y-auto filter-scroll space-y-1 text-sm pr-2">
                                         <!-- Content injected here by JavaScript -->
                                     </div>
                                 </div>
@@ -162,7 +162,8 @@
                         <!-- Column 3: CRUK Cancer Terms (Single Column) -->
                         <div class="border p-3 rounded-lg bg-gray-50">
                             <h3 class="text-base font-semibold text-gray-800 mb-3 border-b pb-1">CRUK Cancer Terms</h3>
-                            <div id="cruk-terms-list" class="h-40 overflow-y-auto filter-scroll space-y-1 text-sm pr-2">
+                            <!-- Inner scrolling list now max-h-32 (closest to h-30) -->
+                            <div id="cruk-terms-list" class="max-h-32 overflow-y-auto filter-scroll space-y-1 text-sm pr-2">
                                 <!-- Content injected here by JavaScript -->
                             </div>
                         </div>
@@ -172,19 +173,16 @@
             </div>
 
             <!-- Panel 2: Data Type Content -->
-            <div id="data-type-panel" class="md:col-span-3 bg-white rounded-xl shadow-lg border border-gray-200 overflow-hidden flex flex-col hidden">
+            <div id="data-type-panel" class="md:col-span-3 bg-white rounded-xl shadow-lg border border-gray-200 flex flex-col hidden">
                 <div class="p-3 sm:p-4 text-gray-600 flex-grow overflow-hidden">
                     <h2 class="text-2xl font-bold text-gray-800 mb-3">Data Type Selection</h2>
-                    <p class="text-sm italic text-gray-500 mb-2">
-                        Select one or more modalities to include in your search.
-                    </p>
-
                     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-3">
 
                         <!-- Data Type 1: Biobank Samples -->
                         <div class="border p-3 rounded-lg bg-gray-50">
                             <h4 class="text-sm font-bold text-gray-700 mb-2 border-b pb-1">Biobank Samples</h4>
-                            <div id="biobank-samples-list" class="h-40 overflow-y-auto filter-scroll space-y-1 text-sm pr-2">
+                            <!-- Inner scrolling list now max-h-32 -->
+                            <div id="biobank-samples-list" class="max-h-32 overflow-y-auto filter-scroll space-y-1 text-sm pr-2">
                                 <!-- Content injected here by JavaScript -->
                             </div>
                         </div>
@@ -192,7 +190,8 @@
                         <!-- Data Type 2: In Vitro Studies -->
                         <div class="border p-3 rounded-lg bg-gray-50">
                             <h4 class="text-sm font-bold text-gray-700 mb-2 border-b pb-1">In Vitro Studies</h4>
-                            <div id="invitro-studies-list" class="h-40 overflow-y-auto filter-scroll space-y-1 text-sm pr-2">
+                            <!-- Inner scrolling list now max-h-32 -->
+                            <div id="invitro-studies-list" class="max-h-32 overflow-y-auto filter-scroll space-y-1 text-sm pr-2">
                                 <!-- Content injected here by JavaScript -->
                             </div>
                         </div>
@@ -200,7 +199,8 @@
                         <!-- Data Type 3: Animal Studies -->
                         <div class="border p-3 rounded-lg bg-gray-50">
                             <h4 class="text-sm font-bold text-gray-700 mb-2 border-b pb-1">Animal Studies</h4>
-                            <div id="animal-studies-list" class="h-40 overflow-y-auto filter-scroll space-y-1 text-sm pr-2">
+                            <!-- Inner scrolling list now max-h-32 -->
+                            <div id="animal-studies-list" class="max-h-32 overflow-y-auto filter-scroll space-y-1 text-sm pr-2">
                                 <!-- Content injected here by JavaScript -->
                             </div>
                         </div>
@@ -208,7 +208,8 @@
                         <!-- Data Type 4: Patient Studies -->
                         <div class="border p-3 rounded-lg bg-gray-50">
                             <h4 class="text-sm font-bold text-gray-700 mb-2 border-b pb-1">Patient Studies</h4>
-                            <div id="patient-studies-list" class="h-40 overflow-y-auto filter-scroll space-y-1 text-sm pr-2">
+                            <!-- Inner scrolling list now max-h-32 -->
+                            <div id="patient-studies-list" class="max-h-32 overflow-y-auto filter-scroll space-y-1 text-sm pr-2">
                                 <!-- Content injected here by JavaScript -->
                             </div>
                         </div>
@@ -217,14 +218,11 @@
             </div>
 
             <!-- Panel 3: Accessibility Content -->
-            <div id="accessibility-panel" class="md:col-span-3 bg-white rounded-xl shadow-lg border border-gray-200 overflow-hidden flex flex-col hidden">
+            <div id="accessibility-panel" class="md:col-span-3 bg-white rounded-xl shadow-lg border border-gray-200 flex flex-col hidden">
                 <div class="p-3 sm:p-4 text-gray-600 flex-grow overflow-hidden">
                     <h2 class="text-2xl font-bold text-gray-800 mb-3">Accessibility and Source</h2>
-                    <p class="text-sm italic text-gray-500 mb-2">
-                        Filter by data access level and source.
-                    </p>
-                    <div class="h-32 overflow-y-auto pr-2 filter-scroll border p-3 rounded-lg">
-                        <div class="text-sm text-gray-400">Placeholder for Accessibility list</div>
+                    <!-- Inner content now max-h-32 -->
+                    <div class="max-h-32 overflow-y-auto pr-2 filter-scroll border p-3 rounded-lg">
                         <!-- Checkboxes here use data-filter-group="access" -->
                         <div class="space-y-2 mt-2">
                              <div class="flex items-center">
