--- a/alternatives/buttons.html
+++ b/alternatives/buttons.html
@@ -9,8 +9,8 @@
     <!-- Use Inter font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap">
     <link rel="stylesheet" href="style.css">
-    <!-- CSS (Equivalent to style.css) -->
-    <script src="script.js"></script>
+    <!-- CSS (Equivalent to buttons.css) -->
+    <script src="style.js"></script>
 </head>
 <body class="p-4 sm:p-8">
     <!-- Main container to hold the filter boxes -->
