--- a/vite/just_vert_bar.html
+++ b/vite/just_vert_bar.html
@@ -2,6 +2,7 @@
 <html>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap">
+    <link rel="stylesheet" href="style.css">
     <style>
         /* This keeps the larger font request in mind */
         body { font-family: 'Inter', sans-serif; background-color: #f8f8f8; font-size: 16px; }
@@ -12,16 +13,13 @@
         .text-\[\#E4002B\]:focus { --tw-ring-color: #E4002B; border-color: #E4002B; }
     </style>
 
-<script type="module" crossorigin src="/CRUK_datahub_landing_page/vite/dist/assets/top_bar-B-AF1a2N.js"></script>
-<link rel="modulepreload" crossorigin href="/CRUK_datahub_landing_page/vite/dist/assets/Header-CkPsEBDC.js">
-<link rel="stylesheet" crossorigin href="/CRUK_datahub_landing_page/vite/dist/assets/Header-UoIphN8d.css">
-
 <body>
 
   <div id="header"></div>
-  <div id="filter_navbar"></div>
-  <div id="studies"></div>
+  <div id="just_vert_navbar"></div>
 
+
+  <script type="module" src="./just_vert_bar_vite.jsx"></script>
 
 </body>
 </html>
