Creation of just vert bar

--- a/vite/just_vert_bar.html
+++ b/vite/just_vert_bar.html
@@ -16,7 +16,7 @@
 <body>
 
   <div id="header"></div>
-  <div id="just_vert_navbar"></div>
+  <div id="vert_navbar"></div>
 
 
   <script type="module" src="./just_vert_bar_vite.jsx"></script>
