Adds in Data Custodian Area, CRUK funding start date and study section.

--- a/vite/vert_bar.html
+++ b/vite/vert_bar.html
@@ -16,7 +16,9 @@
 <body>
 
   <div id="header"></div>
+  <div id="introduction"></div>
   <div id="vert_navbar"></div>
+  <div id="studies"></div>
 
 
   <script type="module" src="./vert_bar_vite.jsx"></script>
