--- a/structural_metadata.html
+++ b/structural_metadata.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Metadata Hierarchy View</title>
-    <link rel="stylesheet" href="styles/structural_metadata.css">
+    <link rel="stylesheet" href="./styles/structural_metadata.css">
 </head>
 <body>
 
@@ -13,6 +13,6 @@
     <div id="metadata-container">
         </div>
 
-    <script src="assets/structural_metadata.js"></script>
+    <script src="./assets/structural_metadata.js"></script>
 </body>
 </html>
