improving the upload page

--- a/src/upload.html
+++ b/src/upload.html
@@ -15,6 +15,7 @@
     </style>
 </head>
 <body>
+    <div id="header"></div>
     <div id="upload"></div>
 
     <script type="module" src="./upload_vite.jsx"></script>
