Changing over from tailwind to MUI. A work in progress

--- a/src/meta.html
+++ b/src/meta.html
@@ -1,30 +1,13 @@
+<!DOCTYPE html>
+<html>
 
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Metadata Page</title>
 
-    <script src="https://cdn.tailwindcss.com"></script>
 
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+<body>
 
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <div id="meta"></div>
 
-    <style>
-        /* Optional: Custom scrollbar styling */
-        ::-webkit-scrollbar { width: 8px; }
-        ::-webkit-scrollbar-track { background: #f1f1f1; }
-        ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 4px; }
-        ::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
-    </style>
-</head>
-<body class="bg-gray-50 text-gray-800 antialiased">
-
-    <div id="meta"></div>
-
-   <script type="module" src="./components/MetadataPage2.jsx"></script>
+  <script type="module" src="./meta_vite.jsx"></script>
 
 </body>
 </html>
