--- a/src/alt_studies.html
+++ b/src/alt_studies.html
@@ -2,7 +2,7 @@
 <html>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <style>
         /* This keeps the larger font request in mind */
         body { font-family: 'Inter', sans-serif; background-color: #f8f8f8; font-size: 16px; }
