Try to link up the filters

--- a/src/alt_studies.html
+++ b/src/alt_studies.html
@@ -19,6 +19,7 @@
   <div id="introduction"></div>
   <div id="filter_navbar"></div>
   <div id="studies"></div>
+  <div id="feedback_widget"></div>
 
   <script type="module" src="./alt_studies_vite.jsx"></script>
 
