Adding the feedback and instructions widget to all pages

--- a/src/alt_studies.html
+++ b/src/alt_studies.html
@@ -20,6 +20,7 @@
   <div id="filter_navbar"></div>
   <div id="studies"></div>
   <div id="feedback_widget"></div>
+  <div id="instructions_widget"></div>
 
   <script type="module" src="./alt_studies_vite.jsx"></script>
 
