--- a/src/upload.html
+++ b/src/upload.html
@@ -17,6 +17,7 @@
 <body>
     <div id="header"></div>
     <div id="upload"></div>
+    <div id="instructions_widget"></div>
 
     <script type="module" src="./upload_vite.jsx"></script>
 </body>
