--- a/src/meta.html
+++ b/src/meta.html
@@ -1,30 +1,25 @@
-
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Metadata Page</title>
-
+<!DOCTYPE html>
+<html>
     <script src="https://cdn.tailwindcss.com"></script>
-
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap">
+    <link rel="stylesheet" href="./styles/style.css">
     <style>
-        /* Optional: Custom scrollbar styling */
-        ::-webkit-scrollbar { width: 8px; }
-        ::-webkit-scrollbar-track { background: #f1f1f1; }
-        ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 4px; }
-        ::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
+        /* This keeps the larger font request in mind */
+        body { font-family: 'Inter', sans-serif; background-color: #f8f8f8; font-size: 16px; }
+        .text-cruk-red { color: #E4002B; }
+        .bg-cruk-red { background-color: #E4002B; }
+        .h-40::-webkit-scrollbar { width: 8px; }
+        .h-40::-webkit-scrollbar-thumb { background-color: #d1d5db; border-radius: 4px; }
+        .text-\[\#E4002B\]:focus { --tw-ring-color: #E4002B; border-color: #E4002B; }
     </style>
-</head>
-<body class="bg-gray-50 text-gray-800 antialiased">
 
-    <div id="meta"></div>
+<body>
 
-   <script type="module" src="./components/MetadataPage2.jsx"></script>
+  <div id="header"></div>
+  <div id="meta"></div>
+  <div id="instructions_widget"></div>
+
+  <script type="module" src="./meta_vite.jsx"></script>
 
 </body>
 </html>
