--- a/public/sign_in.html
+++ b/public/sign_in.html
@@ -4,11 +4,77 @@
     <meta charset="UTF-8">
     <title>Holding Page</title>
 </head>
+<style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            background-color: #f4f4f9; /* Light background */
+            color: #333;
+            max-width: 90%;
+            margin-left: auto;
+            margin-right: auto;
+            font-size: 1.1em; /* Using a larger font as requested */
+        }
+
+        h1 {
+            color: #cc0052; /* A strong, appealing color */
+            border-bottom: 2px solid #cc0052;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+        }
+
+        /* Accordion Styling */
+        details {
+            background-color: #ffffff;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            margin-bottom: 10px;
+            padding: 0;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+        }
+
+        summary {
+            font-weight: bold;
+            padding: 15px 20px;
+            cursor: pointer;
+            outline: none;
+            list-style: none; /* Hide default triangle/arrow */
+            position: relative;
+            color: #007bff; /* A nice blue for interaction */
+            transition: background-color 0.2s;
+        }
+
+        summary:hover {
+            background-color: #f0f0f0;
+        }
+
+        /* Custom expand/collapse indicator (arrow) */
+        summary::after {
+            content: '►'; /* Right-pointing triangle (collapsed) */
+            position: absolute;
+            right: 20px;
+            transition: transform 0.2s;
+        }
+
+        details[open] summary::after {
+            content: '▼'; /* Down-pointing triangle (expanded) */
+            transform: rotate(0deg);
+        }
+
+        .content {
+            padding: 10px 20px 20px 20px;
+            border-top: 1px solid #eee;
+        }
+
+        ul {
+            padding-left: 20px;
+        }
+    </style>
 <body>
 <H1>Holding page - Coming Soon </H1>
 <p>Sign in will be via email in the first instance</p>
 <p>No sign in will be required in order to browse pages, however in order to prevent spam a sign-in is necessary in
 order to submit a data access request.</p>
-
 </body>
 </html>
